--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                 <button type="button" onclick="selectSymptom(this, 'treatment11')" data-price="15000">オフのみ</button>
             </div>
 
-        <label id="repairLabel">本数をお選びください</label>
+        <label id="repairLabel"></label>
         <div id="repairButtons" class="irradiations">
                         <button type="button" id="oneirradiations" onclick="selectirradiations(this)">1本</button>
                         <button type="button" id="twoirradiations" onclick="selectirradiations(this)">2本</button>
@@ -586,7 +586,16 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let irradiationsTimes = {
-            '美白パック〈30分〉': 0
+            '1本': 15,
+            '2本': 30,
+            '3本': 45,
+            '4本': 60,
+            '5本': 75,
+            '6本': 90,
+            '7本': 105,
+            '8本': 120,
+            '9本': 135,
+            '10本': 150
         };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
@@ -599,13 +608,13 @@
             'グラデーション': 90,
             'フレンチ': 120,
             'ワンカラー': 70,
-            'お直しネイル': 60,
-            '長さ出し': 420,
-            'ハンドネイルケア': 30,
-            'オフのみ': 60,
-            'フットデザインアートコース': 30,
-            '親指アートコース': 30,
-            'フット角質ケア': 90
+            'お直しネイル': 0,
+            '長さ出し': 0,
+            'ハンドネイルケア': 70,
+            'オフのみ': 70,
+            'フットデザインアートコース': 120,
+            '親指アートコース': 90,
+            'フット角質ケア': 70
         };
 
 
@@ -661,10 +670,6 @@
         <div class="info-row">
             <p>${selectedDateText}</p>
             <button class="edit-button" onclick="scrollToElement('calendar1')">修正する</button>
-        </div>
-        <hr>
-        <div class="info-row">
-            <p>${totalAmountText}</p>
         </div>
         <hr>
     `;
