--- a/index.html
+++ b/index.html
@@ -527,11 +527,11 @@
                 <span class="highlight-text">◆人気メニューセット◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">おかくず酵素風呂温浴＋メディカルチネイザン</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おかくず酵素風呂温浴＋オイルリンパマッサージ</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">おかくず酵素風呂温浴＋WINBACK施術</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おかくず酵素風呂温浴＋ヨガ</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おかくず酵素風呂温浴＋TRXサスペンショントレーニング</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">おかくず酵素風呂温浴<br>＋<br>メディカルチネイザン</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おかくず酵素風呂温浴<br>＋<br>オイルリンパマッサージ</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">おかくず酵素風呂温浴<br>＋<br>WINBACK施術</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おかくず酵素風呂温浴<br>＋<br>ヨガ</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おかくず酵素風呂温浴<br>＋<br>TRXサスペンショントレーニング</button>
             </div>
         </div>
 
