--- a/index.html
+++ b/index.html
@@ -476,11 +476,11 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">メディカルチネイザン.</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">オイルリンパマッサージ.</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">ヨガ.</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">TRXサスペンショントレーニング.</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK施術.</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】メディカルチネイザン</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】オイルリンパマッサージ</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】ヨガ</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】TRXサスペンショントレーニング</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】WINBACK施術</button>
             </div>
         </div>
 
@@ -497,9 +497,9 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">おがくず酵素風呂.</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">ヨガ.</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">TRXサスペンショントレーニング.</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】おがくず酵素風呂</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】ヨガ</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】TRXサスペンショントレーニング</button>
             </div>
         </div>
 
@@ -515,10 +515,10 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">おがくず酵素風呂.</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">メディカルチネイザン.</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">オイルリンパマッサージ.</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK施術.</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】おがくず酵素風呂</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】メディカルチネイザン</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】オイルリンパマッサージ</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】WINBACK施術</button>
             </div>
         </div>
 
@@ -616,12 +616,12 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let irradiationsTimes = {
-            'メディカルチネイザン.': 60,
-            'オイルリンパマッサージ.': 60,
-            'ヨガ.': 60,
-            'TRXサスペンショントレーニング.': 60,
-            'WINBACK施術.': 30,
-            'おがくず酵素風呂.': 60
+            '【オプション】メディカルチネイザン': 60,
+            '【オプション】オイルリンパマッサージ': 60,
+            '【オプション】ヨガ': 60,
+            '【オプション】TRXサスペンショントレーニング': 60,
+            '【オプション】WINBACK施術': 30,
+            '【オプション】おがくず酵素風呂': 60
         };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
