--- a/index.html
+++ b/index.html
@@ -435,31 +435,27 @@
         }
 
 /* 100点の予約フォームCSS */
-
 body {
-    font-family: 'Inter', sans-serif;
-    background: linear-gradient(135deg, #0fa75d, #13ca5e);
+    font-family: 'Poppins', sans-serif;
+    background-color: #f4f4f9;
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    min-height: 100vh;
+    height: 100vh;
     margin: 0;
-    padding: 20px;
+    padding-top: 20px;
+    overflow-x: hidden;
 }
 
 .container {
-    background: #fff;
+    background-color: #ffffff;
     border-radius: 12px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     width: 90%;
     max-width: 500px;
     padding: 25px;
     box-sizing: border-box;
-    transition: transform 0.3s ease-in-out;
-}
-
-.container:hover {
-    transform: scale(1.02);
+    margin: 0 auto;
 }
 
 h1 {
@@ -467,14 +463,15 @@ h1 {
     margin-bottom: 20px;
     font-size: 26px;
     font-weight: 600;
-    color: #0fa75d;
+    color: #333;
 }
 
 .label {
     display: block;
-    padding: 12px;
-    font-weight: bold;
-    background: #0fa75d;
+    margin-bottom: 10px;
+    padding: 10px;
+    font-weight: 600;
+    background-color: #007bff;
     color: white;
     border-radius: 6px;
     text-align: center;
@@ -485,102 +482,90 @@ input[type="tel"],
 textarea {
     width: 100%;
     padding: 12px;
-    margin-bottom: 15px;
-    border: 2px solid #ddd;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
     border-radius: 6px;
     box-sizing: border-box;
     font-size: 16px;
-    transition: border 0.3s ease-in-out;
+    transition: all 0.3s;
 }
 
 input:focus, textarea:focus {
-    border: 2px solid #0fa75d;
+    border-color: #007bff;
     outline: none;
-}
-
-.button-group {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin-bottom: 20px;
+    box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
 }
 
 button {
-    flex: 1;
     padding: 12px;
     border: none;
     border-radius: 6px;
-    background: #f7f7f7;
-    cursor: pointer;
-    text-align: center;
+    background-color: #28a745;
+    color: #000000;
     font-size: 16px;
-    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+    transition: all 0.3s;
 }
 
 button:hover {
-    background: #ddd;
-}
-
-button.active {
-    background: #0fa75d;
-    color: white;
-    font-weight: bold;
+    background-color: #218838;
+    transform: scale(1.05);
 }
 
 .submit-button {
     width: 100%;
-    padding: 16px;
-    border: none;
-    border-radius: 8px;
-    background: linear-gradient(135deg, #ff6b6b, #ff4c4c);
-    color: white;
+    padding: 15px;
     font-size: 18px;
-    cursor: pointer;
-    transition: background 0.3s ease-in-out;
+    background-color: #dc3545;
 }
 
 .submit-button:hover {
-    background: linear-gradient(135deg, #ff4c4c, #ff2c2c);
+    background-color: #c82333;
 }
 
-/* カレンダーのデザイン改善 */
 .calendar {
     background: #fff;
-    border-radius: 6px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 10px;
     overflow: hidden;
 }
 
 .calendar table {
     width: 100%;
     border-collapse: collapse;
-    text-align: center;
+    table-layout: fixed;
 }
 
 .calendar th, .calendar td {
-    padding: 10px;
-    border: 1px solid #ddd;
-    transition: background 0.3s ease-in-out;
+    text-align: center;
+    padding: 12px;
+    cursor: pointer;
+    transition: background 0.3s;
 }
 
 .calendar td:hover {
-    background: #e3f2e5;
+    background-color: #e9ecef;
 }
 
 .calendar td.selected {
-    background: #0fa75d;
+    background-color: #007bff;
     color: white;
     font-weight: bold;
 }
 
 @media (max-width: 768px) {
+    .container {
+        padding: 15px;
+    }
     h1 {
         font-size: 22px;
     }
-    button {
+    input, button {
         font-size: 14px;
     }
 }
+
     </style>
 </head>
 
