--- a/index.html
+++ b/index.html
@@ -6,58 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>予約フォーム</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #13ca5e;
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            height: 100vh;
-            margin: 0;
-            padding-top: 20px;
-            overflow-x: hidden;
-            /* 横スクロールを防ぐ */
-        }
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #f4f4f9;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    height: 100vh;
+    margin: 0;
+    padding-top: 20px;
+    overflow-x: hidden;
+}
 
-        .container {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 90%;
-            max-width: 500px;
-            padding: 20px;
-            box-sizing: border-box;
-            margin: 0 auto;
-            /* 中央に配置 */
-        }
+.container {
+    background-color: #fdfdfd;
+    border-radius: 12px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    width: 90%;
+    max-width: 500px;
+    padding: 25px;
+    box-sizing: border-box;
+    margin: 0 auto;
+}
 
-        h1 {
-            text-align: center;
-            margin-bottom: 20px;
-            font-size: 24px;
-        }
+h1 {
+    background: linear-gradient(135deg, #13ca5e, #13ca5e); /* 優しいピンクのグラデーション */
+    color: white; /* 文字色 */
+    padding: 20px; /* 余白 */
+    border-radius: 0 0 25px 25px; /* 上は角ばって、下はもっと丸く */
+    text-align: center; /* 中央揃え */
+    display: block; /* 幅いっぱい */
+    margin: -25px -25px 20px -25px; /* .container の横幅にフィット */
+    font-size: 26px;
+    font-weight: 600;
+    box-shadow: inset 0 -5px 10px rgba(0, 0, 0, 0.05); /* 内側のシャドウで立体感 */
+}
 
-        .label {
-            display: block;
-            margin-bottom: 10px;
-            padding: 10px;
-            font-weight: bold;
-            background-color: #13ca5e;
-            color: white;
-            border-radius: 4px;
-            text-align: center;
-        }
+.label {
+    display: block;
+    margin-bottom: 10px;
+    padding: 10px;
+    font-weight: 600;
+    background-color: #13ca5e;
+    color: white;
+    border-radius: 6px;
+    text-align: center;
+}
 
-        input[type="text"],
-        input[type="tel"],
-        textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
+input[type="text"],
+input[type="tel"],
+textarea {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    box-sizing: border-box;
+    font-size: 16px;
+    transition: all 0.3s;
+}
 
         .visit-buttons,
         .symptoms,
@@ -434,64 +441,10 @@
             background-color: #ff4f4f;
         }
 
-/* 100点の予約フォームCSS */
-body {
-    font-family: 'Poppins', sans-serif;
-    background-color: #f4f4f9;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    height: 100vh;
-    margin: 0;
-    padding-top: 20px;
-    overflow-x: hidden;
-}
-
-.container {
-    background-color: #ffffff;
-    border-radius: 12px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    width: 90%;
-    max-width: 500px;
-    padding: 25px;
-    box-sizing: border-box;
-    margin: 0 auto;
-}
-
-h1 {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 26px;
-    font-weight: 600;
-    color: #333;
-}
-
-.label {
-    display: block;
-    margin-bottom: 10px;
-    padding: 10px;
-    font-weight: 600;
-    background-color: #007bff;
-    color: white;
-    border-radius: 6px;
-    text-align: center;
-}
-
-input[type="text"],
-input[type="tel"],
-textarea {
-    width: 100%;
-    padding: 12px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    box-sizing: border-box;
-    font-size: 16px;
-    transition: all 0.3s;
-}
+  /* 100点の予約フォームCSS */
 
 input:focus, textarea:focus {
-    border-color: #007bff;
+    border-color: #13ca5e;
     outline: none;
     box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
 }
@@ -500,7 +453,7 @@ button {
     padding: 12px;
     border: none;
     border-radius: 6px;
-    background-color: #28a745;
+    background-color: #13ca5e;
     color: #000000;
     font-size: 16px;
     cursor: pointer;
@@ -508,7 +461,7 @@ button {
 }
 
 button:hover {
-    background-color: #218838;
+    background-color: #13ca5e;
     transform: scale(1.05);
 }
 
@@ -523,37 +476,6 @@ button:hover {
     background-color: #c82333;
 }
 
-.calendar {
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    padding: 10px;
-    overflow: hidden;
-}
-
-.calendar table {
-    width: 100%;
-    border-collapse: collapse;
-    table-layout: fixed;
-}
-
-.calendar th, .calendar td {
-    text-align: center;
-    padding: 12px;
-    cursor: pointer;
-    transition: background 0.3s;
-}
-
-.calendar td:hover {
-    background-color: #e9ecef;
-}
-
-.calendar td.selected {
-    background-color: #007bff;
-    color: white;
-    font-weight: bold;
-}
-
 @media (max-width: 768px) {
     .container {
         padding: 15px;
@@ -565,15 +487,12 @@ button:hover {
         font-size: 14px;
     }
 }
-
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>≪予約フォームA_カレンダー改造用≫<br>名前<br>電話<br>番号<br>ご来店回数<br>
-            【メニュー欄】<br>・メニューは1つだけ選択できる
-            <br>オプションは複数選択できる<br>予約フォーム
+        <h1>予約フォームA<br>予約フォーム
         </h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
