--- a/index.html
+++ b/index.html
@@ -30,19 +30,59 @@ body {
 }
 
 h1 {
-    background: linear-gradient(135deg, #13ca5e, #13ca5e); /* 優しいピンクのグラデーション */
-    color: white; /* 文字色 */
-    padding: 20px; /* 余白 */
-    border-radius: 0 0 25px 25px; /* 上は角ばって、下はもっと丸く */
-    text-align: center; /* 中央揃え */
-    display: block; /* 幅いっぱい */
-    margin: -25px -25px 20px -25px; /* .container の横幅にフィット */
+    background: linear-gradient(135deg, #13ca5e, #13ca5e);
+    color: white;
+    padding: 20px;
+    border-radius: 0 15px 0px 45px;
+    text-align: center;
+    display: block;
+    margin: -20px -15px 20px -15px;
     font-size: 26px;
     font-weight: 600;
-    box-shadow: inset 0 -5px 10px rgba(0, 0, 0, 0.05); /* 内側のシャドウで立体感 */
+    box-shadow: inset 0 -5px 10px rgba(0, 0, 0, 0.05);
+    position: relative;
+    overflow: hidden;
+}
+
+h1::before {
+    content: "";
+    position: absolute;
+    top: -80px;
+    left: 50%;
+    width: 350px;
+    height: 350px;
+    background: none;
+    border: 25px solid rgba(255, 255, 255, 0.7); /* かなり太め！ */
+    border-radius: 50%;
+    transform: translateX(-50%);
+    opacity: 0.8;
+}
+
+h1::after {
+    content: "";
+    position: absolute;
+    bottom: -90px;
+    right: 5%;
+    width: 280px;
+    height: 280px;
+    background: none;
+    border: 20px solid rgba(255, 255, 255, 0.5); /* こちらも超太め！ */
+    border-radius: 50%;
+    opacity: 0.7;
 }
 
 .label {
+    display: block;
+    margin-bottom: 10px;
+    padding: 6px;
+    font-weight: 600;
+    background-color: #13ca5e;
+    color: white;
+    border-radius: 6px;
+    text-align: center;
+}
+
+.labelmenu {
     display: block;
     margin-bottom: 10px;
     padding: 10px;
