--- a/index.html
+++ b/index.html
@@ -74,44 +74,46 @@
         }
 
         .label {
-    display: block;
-    margin-bottom: 10px;
-    padding: 10px;
-    font-weight: 600;
-    background-color: #13ca5e;
-    color: white;
-    border-radius: 6px;
-    text-align: center;
-    position: relative;
-    overflow: hidden;
-}
+            display: block;
+            margin-bottom: 10px;
+            padding: 10px;
+            font-weight: 600;
+            background-color: #13ca5e;
+            color: white;
+            border-radius: 6px;
+            text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
 
-.label::before {
-    content: "";
-    position: absolute;
-    top: -50px;
-    left: 50%;
-    width: 200px;
-    height: 200px;
-    background: none;
-    border: 15px solid rgba(255, 255, 255, 0.6); /* 太めの白ライン */
-    border-radius: 50%;
-    transform: translateX(-50%);
-    opacity: 0.7;
-}
+        .label::before {
+            content: "";
+            position: absolute;
+            top: -50px;
+            left: 50%;
+            width: 350px;
+            height: 350px;
+            background: none;
+            border: 15px solid rgba(255, 255, 255, 0.6);
+            /* 太めの白ライン */
+            border-radius: 50%;
+            transform: translateX(-50%);
+            opacity: 0.7;
+        }
 
-.label::after {
-    content: "";
-    position: absolute;
-    bottom: -60px;
-    right: 5%;
-    width: 150px;
-    height: 150px;
-    background: none;
-    border: 12px solid rgba(255, 255, 255, 0.4); /* もう1本のライン */
-    border-radius: 50%;
-    opacity: 0.6;
-}
+        .label::after {
+            content: "";
+            position: absolute;
+            bottom: -60px;
+            right: 5%;
+            width: 280px;
+            height: 280px;
+            background: none;
+            border: 12px solid rgba(255, 255, 255, 0.4);
+            /* もう1本のライン */
+            border-radius: 50%;
+            opacity: 0.6;
+        }
 
         input[type="text"],
         input[type="tel"],
@@ -522,7 +524,7 @@
         }
 
         button:hover {
-            background-color: #13ca5e;
+            background-color: #444;
             transform: scale(1.05);
         }
 
