--- a/index.html
+++ b/index.html
@@ -597,22 +597,17 @@
         }
 
         .current-month {
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: #13ca5e;
-            /* 鮮やかなブルーで目立たせる */
-            color: #fff;
-            /* 白文字でコントラストUP */
-            padding: 5px 20px;
-            /* ボックスのサイズを調整 */
-            border-radius: 10px;
-            /* 角をしっかり丸く */
-            font-size: 1.5rem;
-            font-weight: bold;
-            box-shadow: 0 4px 10px rgba(47, 103, 167, 0.3);
-            /* 光が差すような優しい影 */
-        }
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #13ca5e;
+    color: #fff;
+    padding: 3px 12px; /* ボックスのパディングを縮小 */
+    border-radius: 8px; /* 角の丸みを少し減少 */
+    font-size: 1.3rem; /* フォントサイズを小さく */
+    font-weight: bold;
+    box-shadow: 0 2px 6px rgba(47, 103, 167, 0.2); /* 影も控えめに */
+}
     </style>
 </head>
 
